# seko

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
installer/: setup.iss
src/: main.cpp  overlay.cpp  overlay.h  recording_indicator.cpp  recording_indicator.h  resource.h  resource.rc  settings.cpp  settings.h  toast.cpp  toast.h  upload.cpp  upload.h  video_controls.cpp  video_controls.h  video_recorder.cpp  video_recorder.h
